@@ -3,6 +3,7 @@ gphoto2 2.2.1.4.trunk
   * Require popt library to parse command line options.
   * Added --debug-logfile=FILENAME option.
   * Avoid loading of all camlibs if not necessary.
+  * (Half-)Fix to make --with-libgphoto2=PREFIX parameter work.
 
 gphoto2 2.2
 
